# scopa

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  Lingora.toml  README.md  build_and_run.sh  cobertura.xml  codecov.SHA256SUM.sig  gleam.toml  manifest.toml  mise.toml  rust-toolchain.toml
.cargo/: config.toml
.github/nigeleke/: gh-pages-publish.sh
.github/workflows/: acceptance.yml  ci.yml  commit.yml  publish.yml  release.yml  test.yml
assets/: main.css  playing_game.css  scopa_header.css  starting_game.css  target.css
assets/css/: finished_state.css  game_page.css  glow.css  help_page.css  icon_button.css  in_progress.css  main.css  main_menu.css  playing_state.css  scopa_editor.css  setup.css  setup_state.css  style.css  tally_editor.css  team_names_editor.css
build_pipeline/: gleam.toml  manifest.toml
build_pipeline/src/: build_pipeline.gleam
build_pipeline/test/: generate_version_test.gleam
core/: gleam.toml  manifest.toml
core/src/: scopa.gleam
design/: attribution.md
dev/: gleam.toml  manifest.toml
dev/test/: dev_test.gleam
docker/: Dockerfile  avahi-daemon.conf  default.conf  docker-compose.yml  entrypoint.sh
docs/: README.md
docs/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/app/: index.html  playinggamecsseeb2c44bcaeeda5b.css  scopa.wasm
docs/coverage/: index.html
docs/doc/: help.html  settings.html  src-files.js
i18n/: en-GB.ftl  it-IT.ftl
icons/: icon.icns  mk_icons.sh
scopa/: .gitignore  gleam.toml  manifest.toml
scopa/src/: scopa.gleam
src/: lib.rs  main.rs  scopa.gleam  ui.gleam  use_persistent.rs
src/application/: mod.rs  model.rs  page.rs
src/component/: header.gleam  in_progress.gleam  setup.gleam  target_editor.gleam
src/components/: finished_game.rs  mod.rs  playing_game.rs  points.rs  starting_game.rs  target.rs  team_name.rs
src/derived/: team_score.gleam
src/domain/: game.rs  history.rs  mod.rs  points.rs  result.rs  round.gleam  round.rs  round_number.rs  score.gleam  tally.gleam  target.gleam  target.rs  team.gleam  team.rs  team_count.rs  team_id.rs  team_name.gleam  team_name.rs  teams.gleam
src/i18n/: config.rs  en-GB.ftl  error.rs  it-IT.ftl  language.rs  mod.rs  preferred_language_hook.rs
src/pages/: home.rs
src/phase/: completed.gleam  in_progress.gleam  setup.gleam
src/storage/: application_model_hook.rs  mod.rs
test/: scopa_test.gleam
(+904 files in other folders)
